cluster_config_backup/2023_12_02/per_resource_api/validatingwebhookconfigurations.admissionregistration.k8s.io._.istio-validator-istio-system.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: "2023-11-16T21:13:04Z"
  generation: 5
  labels:
    app: istiod
    install.operator.istio.io/owning-resource: installed-state
    install.operator.istio.io/owning-resource-namespace: istio-system
    istio: istiod
    istio.io/rev: default
    operator.istio.io/component: Pilot
    operator.istio.io/managed: Reconcile
    operator.istio.io/version: 1.20.0
    release: istio
  name: istio-validator-istio-system
  resourceVersion: "15563"
  uid: 0608f2b6-0e99-4eb4-b1ec-0a28e055e45c
webhooks:
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvRENDQWVTZ0F3SUJBZ0lRTVZNeENDM3g5UmptRlZEbzFTM1R2akFOQmdrcWhraUc5dzBCQVFzRkFEQVkKTVJZd0ZBWURWUVFLRXcxamJIVnpkR1Z5TG14dlkyRnNNQjRYRFRJek1URXhOakl6TVRRME9Gb1hEVE16TVRFeApNekl6TVRRME9Gb3dHREVXTUJRR0ExVUVDaE1OWTJ4MWMzUmxjaTVzYjJOaGJEQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNYUpEc1dvRkpTeTc3UXZtNXVJZGNiM3llQzlDRHcwSktYSUR4OHUKSlFQQncvazhGL1U0a2dJWGdXNlpqbmFHWUh6TEtmN1REb0NLamRNR0E4blhJcGhDTWhUR1JHZ0ZJMGVra1dRegpwUTE3SkYwRnhIai [...]
    service:
      name: istiod
      namespace: istio-system
      path: /validate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: rev.validation.istio.io
  namespaceSelector: {}
  objectSelector:
    matchExpressions:
    - key: istio.io/rev
      operator: In
      values:
      - default
  rules:
  - apiGroups:
    - security.istio.io
    - networking.istio.io
    - telemetry.istio.io
    - extensions.istio.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*'
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
